# EconomyWarRoom

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
docs/: ARCHITECTURE.md  HANDOFF.md  TODO.md  release.md  testing.md  windows-dev.md
docs/superpowers/plans/: 2026-07-22-economy-war-room-mvp.md  README.md
docs/superpowers/specs/: 2026-07-22-diagnostics-copy-design.md  2026-07-22-economy-war-room-design.md
scripts/: coverage.sh  publish-release.mjs  run-release.mjs
scripts/lib/: release-utils.mjs
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/application/: cache.rs  diagnostics.rs  mod.rs  queue.rs  scheduler.rs  service.rs
src-tauri/src/domain/: constants.rs  mod.rs  sparkline_math.rs  types.rs  watchlist.rs
src-tauri/src/infrastructure/: mod.rs  store.rs  updater.rs  window_ctl.rs
src-tauri/src/infrastructure/yahoo/: client.rs  mod.rs  parse.rs
src-tauri/src/ports/: market_data.rs
src-tauri/tests/: integration_e2e.rs  risk_scenarios.rs
src-tauri/tests/fixtures/: yahoo_chart_aapl.json
src/assets/fonts/: OFL-Pretendard.txt
src/styles/: app.css  fonts.css  tokens.css
src/ui/: app.ts  header.ts  settings-panel.ts  sparkline.ts  types.ts  watchlist.ts
